--- a/web/modules/custom/optawidgets/components/opta_tournament_stats_block/template.html
+++ b/web/modules/custom/optawidgets/components/opta_tournament_stats_block/template.html
@@ -34,7 +34,7 @@
                   {{ moment(match.date).format('h:mm a') }}
               </div>
               <div v-else class="tw-flex tw-justify-center tw-text-xs tw-text-gray-600">
-                  '{{match.minute.label}}
+                  {{match.minute.label}}'
               </div>
             </div>
          </div>
