--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -602,6 +602,10 @@ div#footer-first {
     .views-field-field-canal {
         @apply tw-absolute tw-right-0 tw-top-0 uppercase text-white text-center h-full;
         font-family: $font-title;
+        color: #333;
+        @screen md {
+            @apply text-white;
+        }
     }
     .views-field-field-canal {
         @apply tw-w-20 flex items-center justify-center;
