--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -35,7 +35,8 @@
   }
 }
 
-#block-views-block-goles-home-block-2{
+#block-views-block-goles-home-block-2,
+#block-views-block-goles-home-block-4{
   .gol-partido.video-player{
     .image{
       img.play-icon{
