--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -14,7 +14,11 @@
     }
 }
 
-#block-views-block-videos-block-4 {
+#block-views-block-videos-block-4,
+#block-views-block-videos-block-5,
+#block-views-block-videos-block-6,
+#block-views-block-videos-block-7,
+#block-views-block-videos-block-9 {
     margin-top: 1.3rem;
 }
 
