--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -796,7 +796,7 @@ nav#block-envivo {
         color: #0b3b41 !important;
         font-size: 0.9rem;
     }
-    @screen md {
+    @screen lg {
         margin-right: 0;
     }
 }
