--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -88,12 +88,12 @@
         <div>
             {{ page.fullcontent }}
         </div>
-        <div class="md:tw-flex tw--mx-4" id="main-content-region">
+        <div class="lg:tw-flex tw--mx-4" id="main-content-region">
             {% if page.sidebar_first %}
-                <aside class="md:tw-w-1/3 tw-p-4" role="complementary">
+                <aside class="lg:tw-w-1/3 tw-p-4" role="complementary">
                     {{ page.sidebar_first }}
                 </aside>
-                <div class="md:tw-w-2/3 tw-p-4">
+                <div class="lg:tw-w-2/3 tw-p-4">
                 {{ page.content }}
                 </div>{# /.layout-content #}
             {% else %}
@@ -125,13 +125,13 @@
 {% if page.postcontent2 or page.postcontent_sidebar %}
     <div class="tw-p-4">
         <div class="tw-container tw-mx-auto tw-p-2">
-            <div class="md:tw-flex tw--mx-4">
+            <div class="lg:tw-flex tw--mx-4">
                 {% if page.postcontent_sidebar %}
-                    <aside class="md:tw-w-1/3 tw-p-4 tw-sticky tw-bottom-0 tw-self-end" role="complementary">
+                    <aside class="lg:tw-w-1/3 tw-p-4 tw-sticky tw-bottom-0 tw-self-end" role="complementary">
                         {{ page.postcontent_sidebar }}
                     </aside>
                 {% endif %}
-                <div class="md:tw-w-2/3 tw-p-4">
+                <div class="lg:tw-w-2/3 tw-p-4">
                     {{ page.postcontent2 }}
                 </div>
             </div>
