--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -322,3 +322,17 @@ nav#block-bottommenumobile{
     }
   }
 }
+
+.ads-block {
+  a > img {
+      margin: 0 auto;
+  }
+}
+
+#block-views-block-opinion-block-1{
+  .image{
+    a > img{
+      margin: 0 auto;
+    }
+  }
+}
