--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -43,7 +43,7 @@ div.play-icon {
     }
     .torneo {
         @apply tw-relative tw-my-2 text-white text-base leading-none;
-        @screen md {
+        @screen lg {
             @apply tw-absolute tw-font-semibold;
             top: -30px;
         }
