--- a/web/themes/custom/tailwindcss/templates/node/node--gol-partido--teaser.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--gol-partido--teaser.html.twig
@@ -1,6 +1,6 @@
 <div class="gol-partido teaser" {{ attributes.addClass(classes) }}>
-    <div class="md:tw-flex md:tw-items-top">
-        <div class="image md:tw-w-1/2 tw-relative">
+    <div class="lg:tw-flex md:tw-items-top">
+        <div class="image lg:tw-w-1/2 tw-relative">
             {% if node.hasField('field_image_h') %}
                 {{ content.field_image_h }}
             {% elseif node.hasField('field_image') %}
@@ -10,7 +10,7 @@
                 <a href="{{ url }}"><img src="/themes/custom/tailwindcss/images/icons/play.png" alt="Play" class="play-icon tw-h-12 tw-w-12 opacity-100"></a>
             </div>
         </div>
-        <div class="title-mobile text-sm md:tw-text-base md:tw-w-1/2 md:tw-pl-2">
+        <div class="title-mobile text-sm md:tw-text-base lg:tw-w-1/2 md:tw-pl-2">
             <a href="{{ url }}">{{ label }}</a>
         </div>
     </div>
