--- a/web/modules/custom/mediastream_formatter/templates/mediastream.html.twig
+++ b/web/modules/custom/mediastream_formatter/templates/mediastream.html.twig
@@ -1,5 +1,5 @@
 <div id="mediastream-player-{{ mediastream_id }}" class="mediastream-player tw-bg-gray-650">
-    <div id="video-{{ mediastream_id }}">
+    <div id="video-{{ mediastream_id }}" class="mb-4 lg:mb-0">
         <div class="image tw-relative tw-cursor-pointer" data-id="{{ mediastream_id }}">
             {{ image }}
             <div class="tw-absolute tw-top-0 tw-left-0 play-icon tw-w-full tw-h-full tw-flex tw-items-center tw-justify-center">
