--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -102,7 +102,7 @@
                 </div>{# /.layout-content #}
             {% endif %}
             {% if page.sidebar_second %}
-                <aside class="md:tw-w-1/4" role="complementary">
+                <aside class="lg:tw-w-1/4" role="complementary">
                     {{ page.sidebar_second }}
                 </aside>
             {% endif %}
