--- a/web/themes/custom/tailwindcss/templates/layout/html.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/html.html.twig
@@ -23,6 +23,14 @@
  * @see template_preprocess_html()
  */
 #}
+{%
+  set body_classes = [
+    logged_in ? 'user-logged-in',
+    not root_path ? 'path-frontpage' : 'path-' ~ root_path|clean_class,
+    node_type ? 'page-node-type-' ~ node_type|clean_class,
+    db_offline ? 'db-offline',
+  ]
+%}
 <!DOCTYPE html>
 <html{{ html_attributes }}>
   <head>
@@ -32,7 +40,7 @@
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
   </head>
-  <body{{ attributes }}>
+  <body{{ attributes.addClass(body_classes) }}>
   <div class="loading">
   <div id="loader">
   <img class="imagefile" src="/themes/custom/tailwindcss/images/ajax-loader.gif">
