--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -23,7 +23,7 @@ div.play-icon {
             }
         }
     }
-    @screen md {
+    @screen lg {
         .title {
             bottom: 30px;
             left: 30px;
