--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -211,22 +211,6 @@
   }
   #block-views-block-goles-home-block-1{
     @apply block;
-    .player-goles{
-      >.views-row{
-        width: 66.666667% !important;
-      }
-    }
-    .gol-partido.video-player{
-      .title a{
-        color: #fff;
-      }
-    }
-    .views-element-container{
-      width: 33.333333% !important;
-      .views-row{
-        width: 100% !important;
-      }
-    }
   }
   #block-views-block-goles-home-block-2{
     @apply hidden;
@@ -384,6 +368,33 @@ nav#block-bottommenumobile{
     width: 100% !important;
     .views-row{
       width: 40% !important;
+    }
+  }
+}
+
+@screen lg {
+  #block-views-block-goles-home-block-1{
+    .player-goles{
+      >.views-row{
+        width: 66.666667% !important;
+      }
+    }
+    .gol-partido.video-player{
+      .title {
+        a{
+          color: #fff !important;
+        }
+      }
+    }
+    div{
+      div{
+        .views-element-container{
+          width: 33.333333% !important;
+          .views-row{
+            width: 100% !important;
+          }
+        }
+      }
     }
   }
 }
