--- a/web/modules/custom/optafeeds/components/horizontal_results/template.html
+++ b/web/modules/custom/optafeeds/components/horizontal_results/template.html
@@ -1,6 +1,6 @@
 <div class="overflow-y-hidden whitespace-no-wrap lg:overflow-auto lg:whitespace-normal">
     <div class="flex" v-if="!loading && matches">
-        <div v-for="match in matches" :class="match.playing == 5 ? 'is-active' : ''" class="flex-1 text-center mr-8 lg:mr-0 tw-cursor-pointer">
+        <div v-for="match in matches" :class="match.playing == 1 ? 'is-active' : ''" class="flex-1 text-center mr-8 lg:mr-0 tw-cursor-pointer">
             <div class="flex justify-center" @click="goto('/matches/'+match.id)">
                 <img class="mr-2" :src="'//secure.omo.akamai.opta.net/image.php?secure=true&h=secure.omo.akamai.opta.net&sport=football&entity=team&description=badges&dimensions=20&id='+ match.home.id" :alt="match.home.name" :title="match.home.name">
                 <div class="font-bold" :class="match.period == 'FullTime'?'text-red-700':'text-gray-500'">
@@ -20,10 +20,10 @@
                         <img src="/sites/default/files/widgets/play_button.png" alt="Ver goles" title="Ver goles">
                         <span class="pl-1 text-xs font-medium title-color">Ver goles</span>
                     </a>
-                    <a v-else :href="'/node/'+cronicles[match.id]" class="flex">
+                    <div v-else @click="goto('/matches/'+match.id)" class="flex">
                         <img src="/sites/default/files/widgets/play_button.png" alt="Ver resumen" title="Ver resumen">
                         <span class="pl-1 text-xs font-medium title-color">Ver resumen</span>
-                    </a>
+                    </div>
                 </div>
             </div>
             <div v-else>
