--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -58,6 +58,13 @@ div[id*="block-views-block-videos-"]{
             position: absolute;
         }
     }
+    #views-exposed-form-videos-block-9{
+        .js-form-type-select{
+            &:after {
+                left: 9rem;
+            }
+        }
+    }
 }
 
 div[id*="block-views-block-opinion-"],
