--- a/web/modules/custom/optawidgets/components/opta_general_stats_block/template.html
+++ b/web/modules/custom/optawidgets/components/opta_general_stats_block/template.html
@@ -24,6 +24,14 @@
             </div>
         </div>
     </div>
+    <div class="tool flex mb-4">
+        <div class="w-2/12 self-center text-center">
+            <img class="inline-block" src="/themes/custom/tailwindcss/images/tool.png">
+        </div>
+        <div class="w-10/12 text-xs self-center opta-widgets">
+            Más datos y estadísticas desplazándose de forma horizontal 
+        </div>
+    </div>
     <div class="opta-widgets">
         <div v-if="competition>0 && season>0">
             <div class="opta-widgets-menu flex flex-no-wrap overflow-x-auto w-full mb-px">
