--- a/web/modules/custom/optafeeds/components/horizontal_results/template.html
+++ b/web/modules/custom/optafeeds/components/horizontal_results/template.html
@@ -3,7 +3,7 @@
         <div v-for="match in matches" :class="match.playing == 1 ? 'is-active' : ''" class="flex-1 text-center mr-8 lg:mr-0 tw-cursor-pointer">
             <div class="flex justify-center" @click="goto('/matches/'+match.id)">
                 <img class="mr-2" :src="'//secure.omo.akamai.opta.net/image.php?secure=true&h=secure.omo.akamai.opta.net&sport=football&entity=team&description=badges&dimensions=20&id='+ match.home.id" :alt="match.home.name" :title="match.home.name">
-                <div class="font-bold" :class="match.period == 'FullTime'?'text-red-700':'text-gray-500'">
+                <div class="font-bold" :class="match.period === 'FullTime' || match.period === 'Full Time' ? 'text-red-700' : match.period === 'Postponed' || match.period === 'TBC' || match.period === 'Abandoned' ? 'text-gray-500' : match.period === 'PreMatch' ?  'text-gray-500' : 'text-green-700'">
                     <small v-if="(match.home.pen_score > 0 || match.away.pen_score > 0)">({{ match.home.pen_score }})</small>
                     {{ match.home.score }} : {{ match.away.score }}
                     <small v-if="(match.home.pen_score > 0 || match.away.pen_score > 0)">({{ match.away.pen_score }})</small>
