--- a/web/themes/custom/tailwindcss/templates/node/node--article--full.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--article--full.html.twig
@@ -29,8 +29,10 @@
         {% endif %}
         {% if (node.hasField('field_mediastream') and node.field_mediastream.value) %}
             {{ content.field_mediastream }}
+            <div class="tw-text-gray-650 tw-text-sm tw-mb-4">{{ node.field_image_h.title }}</div>
         {% elseif node.field_url.uri %}
             {{ content.field_url }}
+            <div class="tw-text-gray-650 tw-text-sm tw-mb-4">{{ node.field_image_h.title }}</div>
         {% elseif node.hasField('field_image_h') %}
             <div class="tw-my-4">{{ content.field_image_h }}</div>
             <div class="tw-text-gray-650 tw-text-sm tw-mb-4">{{ node.field_image_h.title }}</div>
