add players dugout and eplayer

--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -346,7 +346,9 @@ nav#block-bottommenumobile{
   }
 }
 
-.mediastream-player{
+.mediastream-player,
+.dugout-player,
+.eplayer-player{
   iframe {
     width: 100%;
   }
