--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -400,3 +400,16 @@ nav#block-bottommenumobile{
     }
   }
 }
+
+.Opta .Opta-Tabs .Opta-Nav>ul.Opta-Overflowed{
+    overflow-x: scroll;
+    display: flex;
+    white-space: nowrap;
+
+}
+.Opta .Opta-Nav>ul li.Opta-Overflow{
+  display: block;
+  position: relative;
+  top: 0 !important;
+  width: 100% !important;
+}
