--- a/web/themes/custom/tailwindcss/templates/node/node--article--full.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--article--full.html.twig
@@ -39,13 +39,13 @@
         {% elseif node.field_url.uri %}
             {{ content.field_url }}
             <div class="tw-text-gray-650 tw-text-sm tw-my-4">{{ node.field_image_h.title }}</div>
-        {% elseif node.hasField('field_image_h') %}
+        {% elseif (node.hasField('field_image_h') and node.field_image_h.0) %}
             <div class="tw-my-4">{{ content.field_image_h }}</div>
             <div class="tw-text-gray-650 tw-text-sm tw-mb-4">{{ node.field_image_h.title }}</div>
-        {% elseif node.hasField('field_image') %}
+        {% elseif (node.hasField('field_image') and node.field_image.0) %}
             <div class="tw-mt-4 tw-mb-2">{{ content.field_image }}</div>
             <div class="tw-text-primary tw-text-sm tw-mb-2">{{ node.field_image.title }}</div>
-        {% elseif node.hasField('field_images') %}
+        {% elseif (node.hasField('field_images') and node.field_images.0) %}
             <div class="tw-mt-4 tw-mb-2">{{ content.field_images }}</div>
             <div class="tw-text-primary tw-text-sm tw-mb-2">{{ node.field_images.title }}</div>
         {% endif %}
