update horizontal result

--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -68,7 +68,7 @@
     </div>
 {% endif %}
 {% if page.breadcrumb %}
-    <div id="horizontal-results" class="tw-p-4 tw-bg-gray">
+    <div id="horizontal-results" class="pb-4 tw-bg-gray">
         <div class="tw-container tw-mx-auto tw-px-4">
             {{ page.breadcrumb }}
         </div>
