--- a/web/modules/custom/optafeeds/components/horizontal_results/template.html
+++ b/web/modules/custom/optafeeds/components/horizontal_results/template.html
@@ -1,3 +1,8 @@
+<div class="flex">
+    <div class="flex-1 text-center font-title table-option uppercase pb-3 px-2">
+        {{active_tournament}}
+    </div>
+</div>
 <div class="overflow-y-hidden whitespace-no-wrap lg:overflow-auto lg:whitespace-normal">
     <div class="flex" v-if="!loading && matches">
         <div v-for="match in matches" :class="match.playing == 1 ? 'is-active' : ''" class="flex-1 text-center mr-8 lg:mr-0 tw-cursor-pointer">
