--- a/web/themes/custom/tailwindcss/src/sass/_texts.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_texts.scss
@@ -12,6 +12,7 @@ h2, .title {
   @apply tw-text-4xl mb-4;
   @apply tw-text-primary tw-leading-none;
 }
+h1.title-news,
 h2.title-news {
   font-family: $font-title;
   @apply tw-text-3xl mb-4; 
