--- a/web/themes/custom/tailwindcss/templates/block/block--futbolred.html.twig
+++ b/web/themes/custom/tailwindcss/templates/block/block--futbolred.html.twig
@@ -25,7 +25,7 @@
  * @see template_preprocess_block()
  */
 #}
-<div{{ attributes.addClass('block md:hidden lg:block') }}>
+<div{{ attributes.addClass('hidden md:hidden lg:block') }}>
   {{ title_prefix }}
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
